<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="233dp"
        android:layout_height="157dp"
        app:srcCompat="@drawable/cheating_01_failed"/>

    <TextView
        android:id="@+id/caught_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caught_text_view"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/replay_button_caught"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replay_button"/>
    <Button
        android:id="@+id/to_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_home_button"/>

</LinearLayout>