<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.toracode.androidtest.Cheat2Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/warning_text_2"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/answer_text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:text="Answer"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/go_back_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"/>

        <Button
            android:id="@+id/confirm_cheat_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_cheat_2"/>

    </LinearLayout>

</LinearLayout>
